--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -26,8 +26,14 @@
 // $input-shadow: none;
 
 // Import only what you need from Bulma
-// @import "bulma/sass/utilities/_all.sass";
-// @import "bulma/sass/base/_all.sass";
+@import "bulma/sass/utilities";
+@import "bulma/sass/base";
+@import "bulma/sass/helpers";
+@import "bulma/sass/themes";
+
+@import "bulma/sass/grid";
+@import "bulma/sass/layout";
+
 // @import "bulma/sass/elements/button.sass";
 // @import "bulma/sass/elements/container.sass";
 // @import "bulma/sass/elements/title.sass";
@@ -36,4 +42,4 @@
 // @import "bulma/sass/layout/hero.sass";
 // @import "bulma/sass/layout/section.sass";
 
-@import 'bulma/bulma';
+// @import 'bulma/bulma';
