feat: Implement robust dark mode controller
dark mode

dark mode

--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -43,3 +43,9 @@
 // @import "bulma/sass/layout/section.sass";
 
 // @import 'bulma/bulma';
+
+// dark mode
+html.wa-theme-default-dark .only-light,
+html:not(.wa-theme-default-dark) .only-dark {
+  display: none;
+}
