chore: Allow to customize brand colors

--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -49,3 +49,33 @@ html.wa-theme-default-dark .only-light,
 html:not(.wa-theme-default-dark) .only-dark {
   display: none;
 }
+
+// customize wa theme
+:root,
+:host,
+.wa-theme-default-light {
+  /* Changes the brand color to violet across the library */
+  --wa-color-brand-fill-quiet: var(--wa-color-violet-95);
+  --wa-color-brand-fill-normal: var(--wa-color-violet-90);
+  --wa-color-brand-fill-loud: var(--wa-color-violet-50);
+  --wa-color-brand-border-quiet: var(--wa-color-violet-90);
+  --wa-color-brand-border-normal: var(--wa-color-violet-80);
+  --wa-color-brand-border-loud: var(--wa-color-violet-60);
+  --wa-color-brand-on-quiet: var(--wa-color-violet-40);
+  --wa-color-brand-on-normal: var(--wa-color-violet-30);
+  --wa-color-brand-on-loud: white;
+
+  --wa-color-text-link: var(--wa-color-violet-40);
+}
+
+.wa-theme-default-dark {
+  --wa-color-text-link: var(--wa-color-violet-70);
+}
+// typography
+a {
+  color: var(--wa-color-text-link);
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
