--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -79,3 +79,15 @@ a {
     text-decoration: underline;
   }
 }
+
+// grid
+wa-card.grid-card {
+  width: 100%;
+  height: 100%;
+  min-height: 12rem;
+  max-height: 16rem;
+
+  &::part(base) {
+    height: 100%;
+  }
+}
