--- a/lib/generators/rails/templates/new.rb.tt
+++ b/lib/generators/rails/templates/new.rb.tt
@@ -5,8 +5,8 @@ class Views::<%= class_name.pluralize %>::New < Views::Base
   include Phlex::Rails::Helpers::ContentFor
   include Phlex::Rails::Helpers::DOMID
 
-  def initialize(post)
-    @post = post
+  def initialize(<%= model_resource_name %>)
+    <%= model_resource_name(prefix: "@") %> = <%= model_resource_name %>
   end
 
   def view_template
