chore: Refactor PageHeader into main-header slot

--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -121,6 +121,10 @@ main {
   padding: var(--wa-space-m);
 }
 
+[slot="main-header"] {
+  padding: 0 var(--wa-space-m);
+}
+
 // callouts
 wa-callout {
   strong {
