--- a/lib/generators/rails/templates/index.rb.tt
+++ b/lib/generators/rails/templates/index.rb.tt
@@ -37,12 +37,12 @@ class Views::<%= class_name.pluralize %>::Index < Views::Base
             # add card body
           }
 
-          div(slot: "footer", class: "is-flex is-justify-content-space-between is-align-items-center") {
+          div(slot: "footer", class: "wa-split wa-align-items-center") {
             render Components::WebAwesome::WaButton.new(appearance: :outlined, variant: :brand, href: <%= show_helper(singular_table_name, type: :path) %>) {
               "More Info"
             }
 
-            div(class: "is-flex") {
+            div(class: "wa-cluster") {
               render Components::WebAwesome::WaIconButton.new(name: "pen", href: <%= edit_helper(singular_table_name, type: :path) %>, variant: :regular, label: "Edit <%= human_name.downcase %>")
 
               button_to <%= model_resource_name %>, method: :delete, data: { turbo_confirm: "Are you sure?" } do
