--- a/lib/generators/rails/templates/edit.rb.tt
+++ b/lib/generators/rails/templates/edit.rb.tt
@@ -25,7 +25,7 @@ class Views::<%= class_name.pluralize %>::Edit < Views::Base
     end
 
     section {
-      render(partial: "form", locals: { <%= model_resource_name %>: <%= model_resource_name(prefix: "@") %> })
+      render partial("form", <%= model_resource_name %>: <%= model_resource_name(prefix: "@") %>)
     }
   end
 end
