--- a/lib/generators/rails/templates/edit.rb.tt
+++ b/lib/generators/rails/templates/edit.rb.tt
@@ -15,11 +15,13 @@ class Views::<%= class_name.pluralize %>::Edit < Views::Base
     content_for :main_header do
       render Components::PageHeader.new do |header|
         header.title_bar { |title_bar|
-          title_bar.leading_action {
-            render Components::WebAwesome::WaIconButton.new(name: "arrow-left", href: <%= index_helper(type: :path) %>, variant: :regular, label: "Back to <%= human_name.pluralize.downcase %>")
-          }
+          div(class: "wa-cluster") {
+            title_bar.leading_action {
+              render Components::WebAwesome::WaIconButton.new(name: "arrow-left", href: <%= index_helper(type: :path) %>, variant: :regular, label: "Back to <%= human_name.pluralize.downcase %>")
+            }
 
-          title_bar.title { "Editing <%= human_name.downcase %>" }
+            title_bar.title { "Editing <%= human_name.downcase %>" }
+          }
         }
       end
     end
