--- a/lib/generators/rails/templates/index.rb.tt
+++ b/lib/generators/rails/templates/index.rb.tt
@@ -22,7 +22,7 @@ class Views::<%= class_name.pluralize %>::Index < Views::Base
 
           title_bar.actions {
             render Components::WebAwesome::WaButton.new(appearance: :filled, variant: :brand, size: :small, href: <%= new_helper(type: :path) %>) {
-              render Components::WebAwesome::WaIcon.new(slot: "prefix", name: "plus", variant: "solid")
+              render Components::WebAwesome::WaIcon.new(slot: "start", name: "plus", variant: "solid")
               span { "New <%= human_name.downcase %>" }
             }
           }
@@ -43,10 +43,14 @@ class Views::<%= class_name.pluralize %>::Index < Views::Base
             }
 
             div(class: "wa-cluster") {
-              render Components::WebAwesome::WaIconButton.new(name: "pen", href: <%= edit_helper(singular_table_name, type: :path) %>, variant: :regular, label: "Edit <%= human_name.downcase %>")
+              render Components::WebAwesome::WaButton.new(href: <%= edit_helper(singular_table_name, type: :path) %>, variant: :regular, appearance: :plain) {
+                render Components::WebAwesome::WaIcon.new(name: "pen", label: "Edit <%= human_name.downcase %>")
+              }
 
               button_to <%= model_resource_name %>, method: :delete, data: { turbo_confirm: "Are you sure?" } do
-                render Components::WebAwesome::WaIconButton.new(name: "trash", variant: :regular, label: "Destroy <%= human_name.downcase %>")
+                render Components::WebAwesome::WaButton.new(variant: :regular, appearance: :plain) {
+                  render Components::WebAwesome::WaIcon.new(name: "trash", label: "Destroy <%= human_name.downcase %>")
+                }
               end
             }
           }
