--- a/lib/generators/rails/templates/new.rb.tt
+++ b/lib/generators/rails/templates/new.rb.tt
@@ -16,7 +16,9 @@ class Views::<%= class_name.pluralize %>::New < Views::Base
       render Components::PageHeader.new do |header|
         header.title_bar { |title_bar|
           title_bar.leading_action {
-            render Components::WebAwesome::WaIconButton.new(name: "arrow-left", href: <%= index_helper(type: :path) %>, variant: :regular, label: "Back to <%= human_name.pluralize.downcase %>")
+            render Components::WebAwesome::WaButton.new(href: <%= index_helper(type: :path) %>, variant: :regular, appearance: :plain) {
+              render Components::WebAwesome::WaIcon.new(name: "arrow-left", label: "Back to <%= human_name.pluralize.downcase %>")
+            }
           }
 
           title_bar.title { "New <%= human_name.downcase %>" }
