--- a/lib/generators/rails/templates/index.rb.tt
+++ b/lib/generators/rails/templates/index.rb.tt
@@ -43,13 +43,13 @@ class Views::<%= class_name.pluralize %>::Index < Views::Base
             }
 
             div(class: "wa-cluster") {
-              render Components::WebAwesome::WaButton.new(href: <%= edit_helper(singular_table_name, type: :path) %>, variant: :regular, appearance: :plain) {
-                render Components::WebAwesome::WaIcon.new(name: "pen", label: "Edit <%= human_name.downcase %>")
+              render Components::WebAwesome::WaButton.new(href: <%= edit_helper(singular_table_name, type: :path) %>, appearance: :plain) {
+                render Components::WebAwesome::WaIcon.new(name: "pen", variant: :regular, label: "Edit <%= human_name.downcase %>")
               }
 
               button_to <%= model_resource_name %>, method: :delete, data: { turbo_confirm: "Are you sure?" } do
-                render Components::WebAwesome::WaButton.new(variant: :regular, appearance: :plain) {
-                  render Components::WebAwesome::WaIcon.new(name: "trash", label: "Destroy <%= human_name.downcase %>")
+                render Components::WebAwesome::WaButton.new(appearance: :plain) {
+                  render Components::WebAwesome::WaIcon.new(name: "trash", variant: :regular, label: "Destroy <%= human_name.downcase %>")
                 }
               end
             }
