--- a/lib/generators/rails/templates/show.rb.tt
+++ b/lib/generators/rails/templates/show.rb.tt
@@ -18,8 +18,8 @@ class Views::<%= class_name.pluralize %>::Show < Views::Base
         header.title_bar { |title_bar|
           div(class: "wa-cluster") {
             title_bar.leading_action {
-              render Components::WebAwesome::WaButton.new(href: <%= index_helper(type: :path) %>, variant: :regular, appearance: :plain) {
-                render Components::WebAwesome::WaIcon.new(name: "arrow-left", label: "Back to <%= human_name.pluralize.downcase %>")
+              render Components::WebAwesome::WaButton.new(href: <%= index_helper(type: :path) %>, appearance: :plain) {
+                render Components::WebAwesome::WaIcon.new(name: "arrow-left", variant: :regular, label: "Back to <%= human_name.pluralize.downcase %>")
               }
             }
 
@@ -29,13 +29,13 @@ class Views::<%= class_name.pluralize %>::Show < Views::Base
           }
 
           title_bar.actions {
-            render Components::WebAwesome::WaButton.new(href: <%= edit_helper(type: :path) %>, variant: :regular, appearance: :plain) {
-              render Components::WebAwesome::WaIcon.new(name: "pen", label: "Edit <%= human_name.downcase %>") 
+            render Components::WebAwesome::WaButton.new(href: <%= edit_helper(type: :path) %>, appearance: :plain) {
+              render Components::WebAwesome::WaIcon.new(name: "pen", variant: :regular, label: "Edit <%= human_name.downcase %>") 
             }
 
             button_to <%= model_resource_name(prefix: "@") %>, method: :delete, data: { turbo_confirm: "Are you sure?" } do
-              render Components::WebAwesome::WaButton.new(variant: :regular, appearance: :plain) {
-                render Components::WebAwesome::WaIcon.new(name: "trash", label: "Destroy <%= human_name.downcase %>")
+              render Components::WebAwesome::WaButton.new(appearance: :plain) {
+                render Components::WebAwesome::WaIcon.new(name: "trash", variant: :regular, label: "Destroy <%= human_name.downcase %>")
               }
             end
           }
